--- a/notebooks/classic_nlp/06-classifiers.ipynb
+++ b/notebooks/classic_nlp/06-classifiers.ipynb
@@ -166,13 +166,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Plot</th>\n",
+       "      <th>Genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The film is about a family who move to the sub...</td>\n",
+       "      <td>comedy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Before heading out to a baseball game at a nea...</td>\n",
+       "      <td>comedy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The plot is that of a black woman going to the...</td>\n",
+       "      <td>comedy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>On a beautiful summer day a father and mother ...</td>\n",
+       "      <td>drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A thug accosts a girl as she leaves her workpl...</td>\n",
+       "      <td>drama</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                Plot   Genre\n",
+       "0  The film is about a family who move to the sub...  comedy\n",
+       "1  Before heading out to a baseball game at a nea...  comedy\n",
+       "2  The plot is that of a black woman going to the...  comedy\n",
+       "3  On a beautiful summer day a father and mother ...   drama\n",
+       "4  A thug accosts a girl as she leaves her workpl...   drama"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('https://raw.githubusercontent.com/tiagoft/NLP/main/wiki_movie_plots_drama_comedy.csv')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.004640819878178478 0.04911534371072223\n",
+      "0.4233781301363241 0.5766218698636759\n"
+     ]
+    }
+   ],
+   "source": [
+    "N_funny = len(df[df[\"Plot\"].str.lower().str.contains(\"funny\")])\n",
+    "N_sad = len(df[df[\"Plot\"].str.lower().str.contains(\"sad\")])\n",
+    "\n",
+    "P_funny = N_funny / len(df)\n",
+    "P_sad = N_sad / len(df)\n",
+    "\n",
+    "N_comedy = len(df[df[\"Genre\"] == \"comedy\"])\n",
+    "\n",
+    "P_comedy = N_comedy / len(df)\n",
+    "P_drama = 1 - P_comedy\n",
+    "\n",
+    "print(P_funny, P_sad)\n",
+    "print(P_comedy, P_drama)"
    ]
   },
   {
@@ -233,9 +332,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.73\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -288,9 +395,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.71\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.naive_bayes import BernoulliNB\n",
@@ -300,7 +415,7 @@
     "\n",
     "# Create the pipeline\n",
     "model = Pipeline([\n",
-    "    ('vectorizer', CountVectorizer(binary=True)),\n",
+    "    ('vectorizer', CountVectorizer(binary=True, min_df=2, max_df=0.6)),\n",
     "    ('classifier', BernoulliNB())\n",
     "])\n",
     "\n",
@@ -324,11 +439,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Exercise 7: Term Frequency\n",
     "\n",
@@ -341,6 +451,41 @@
     "1. Change the parameters in `CountVectorizer` so that `binary=False`\n",
     "1. Change the `BernoulliNB` classifier to a `MultinomialNB` counterpart. \n",
     "1. Evaluate the resulting classification pipeline. Did we get any increase in accuracy?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.77\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Create the pipeline\n",
+    "model = Pipeline([\n",
+    "    ('vectorizer', CountVectorizer(binary=False, min_df=2, max_df=0.6)),\n",
+    "    ('classifier', MultinomialNB())\n",
+    "])\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(df['Plot'], df['Genre'], test_size=0.2)\n",
+    "# Train the pipeline\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Accuracy: {accuracy:.2f}')"
    ]
   },
   {
@@ -374,9 +519,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "935a5120255049e2b58c663fa0a28448",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.5, description='x1', max=2.0, min=-2.0, step=0.01), FloatSlider(valu…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.update_plot(x1, x2, beta1, beta2, beta0)>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import ipywidgets as widgets\n",
@@ -454,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,6 +636,29 @@
     "    ('vectorizer', CountVectorizer(binary=True)),\n",
     "    ('classifier', LogisticRegression())\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.78\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(df['Plot'], df['Genre'], test_size=0.2)\n",
+    "# Train the pipeline\n",
+    "model_lr.fit(X_train, y_train)\n",
+    "y_pred = model_lr.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Accuracy: {accuracy:.2f}')"
    ]
   },
   {
@@ -502,11 +695,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solve the exercise here"
+    "# Solve the exercise here\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "model_lr = Pipeline([\n",
+    "    ('vectorizer', TfidfVectorizer(binary=True, min_df=3, max_df=0.6, stop_words=\"english\")),\n",
+    "    ('classifier', LogisticRegression())\n",
+    "])\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(df['Plot'], df['Genre'], test_size=0.2)\n",
+    "# Train the pipeline\n",
+    "model_lr.fit(X_train, y_train)\n",
+    "y_pred = model_lr.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Accuracy: {accuracy:.2f}')"
    ]
   },
   {
